--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap");
 body, html {
   margin: 0;
   padding: 0;
+  font-family: 'Nunito', sans-serif;
 }
 
 .flex-container {
@@ -43,6 +45,8 @@ body, html {
   margin: .2em;
   padding: 2em;
   min-width: 600px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .flex-container .card-info {
@@ -74,6 +78,9 @@ body, html {
   color: white;
   font-weight: 600;
   letter-spacing: 2px;
+  border-radius: 5px;
+  -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .flex-container .card-info .cta .ingreso {
