--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap');
+
 body, html {
     margin: 0;
     padding: 0;
+    font-family: 'Nunito', sans-serif;
     
 }
 .flex-container {
@@ -27,6 +30,7 @@ body, html {
         margin: .2em;
         padding: 2em;
         min-width: 600px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
 
     .card-info {
@@ -47,6 +51,8 @@ body, html {
                 color: white;
                 font-weight: 600;
                 letter-spacing: 2px;
+                border-radius: 5px;
+                box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
             }
     
             .ingreso {
