detalles de estilo

--- a/css/style.css
+++ b/css/style.css
@@ -116,4 +116,14 @@ body, html {
 .flex-container footer a {
   color: white;
 }
+
+.flex-container .abby {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.flex-container .abby a {
+  text-decoration: none;
+}
 /*# sourceMappingURL=style.css.map */
