--- a/css/style.scss
+++ b/css/style.scss
@@ -85,4 +85,14 @@ body, html {
             color: white;
         }
     }
+
+    .abby {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+
+        a {
+            text-decoration: none;
+        }
+    }
 }
